create the container for the books

--- a/index.html
+++ b/index.html
@@ -35,6 +35,15 @@
     </div>
   
   </form>
+
+  <div class="cards_container">
+    <div class="default_content">
+        <h3>Click The Add Book Button <br>
+            Fill The Form To Add Your Books
+        </h3>
+    </div>
+
+  </div>
 <!-- 
   <p class= 'title'></p>
   <p class= 'author'></p>
