--- a/index.html
+++ b/index.html
@@ -37,11 +37,12 @@
   </form>
 
   <div class="cards_container">
-    <div class="default_content">
+    <!-- <div class="default_content">
         <h3>Click The Add Book Button <br>
             Fill The Form To Add Your Books
         </h3>
-    </div>
+    </div> -->
+    
 
   </div>
 <!-- 
