add a new container border

--- a/index.html
+++ b/index.html
@@ -36,15 +36,14 @@
   
   </form>
 
-  <div class="cards_container">
-    <!-- <div class="default_content">
-        <h3>Click The Add Book Button <br>
-            Fill The Form To Add Your Books
-        </h3>
-    </div> -->
-    
-
+  <div class="container_border">
+      <div class="default_content">
+    <h3>Click The Add Book Button <br>
+        Fill The Form To Add Your Books
+    </h3>
+ </div>
   </div>
+  <div class="cards_container"></div>
 <!-- 
   <p class= 'title'></p>
   <p class= 'author'></p>
