--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 
   <form>
     <div>
-      <label for = "title">Book Title : </label>
+      <label for = "title">Book Title </label>
       <input type = "text" id = "title" name = "title">
     </div>
 
