make the user inputs display on the cards

--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
 
     <div>
       <label>Pages</label>
-      <input type = "number" min = "0">
+      <input type = "number" min = "0" id="pages">
     </div>
 
     <div>
