--- a/index.html
+++ b/index.html
@@ -16,12 +16,12 @@
   <form>
     <div>
       <label for = "title">Book Title </label>
-      <input type = "text" id = "title" name = "title">
+      <input type = "text" maxlength="17" id = "title" name = "title">
     </div>
 
     <div>
       <label for = "author">Book Author</label>
-      <input type = "text" id = "author" name = "author">
+      <input type = "text" maxlength="13" id = "author" name = "author">
     </div>
 
     <div>
