style the card and adjust its content

--- a/index.html
+++ b/index.html
@@ -8,7 +8,10 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-  <h1>My Book Library</h1>
+  <header>
+    <h1>My Book Library</h1>
+  </header>
+  
   <div class="add_book">
     <button>Add Book</button>
   </div>
